modify footer and add READM.md

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 		</section>
 
 		<section id="midFoot">
-			<p>&copy; 2070-2100 | www.starforce.com</p>
+			<p>&copy; 2070-&infin; | Created by klemontea</p>
 		</section>
 
 		<section id="rightFoot">
